--- a/src/WEB-INF/liferay-plugin-package.properties
+++ b/src/WEB-INF/liferay-plugin-package.properties
@@ -6,7 +6,7 @@ short-description=
 long-description=
 change-log=
 page-url=http://www.liferay.com
-author=Liferay, Inc.
+author=Joshua Wu
 licenses=LGPL
 liferay-versions=7.0.0+
 
